# HomeBench

./: .gitignore  README.md  main.py  pyproject.toml
code/: eval.py  model_test.py  ollama_model_test.py  qwen3_model_test.py
dataset/: error_multi.json  mix_multi.json  normal_multi.json  test_data_all_type.jsonl  unexist_single.json
dataset/prompt/: five_shot.txt  four_shot.txt  one_shot.txt  three_shot.txt  two_shot.txt
outputs/: ollama_qwen_test.py  ollama_test_result.json  qwen3_test.py  qwen_test_result100.json
